corrected_some_extra_returns

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -162,10 +162,9 @@ fill_mean_median &lt;- paste(&quot;The average number of steps taken per day is&
 print (fill_mean_median)</code></pre>
 <pre><code>## [1] &quot;The average number of steps taken per day is 10749.77 and the median is 10641&quot;</code></pre>
 <pre class="r"><code>mean_diff = abs(mean_steps - fill_mean_steps)</code></pre>
-<p>Imputing missing values with mean at the same interval across all days</p>
 </div>
-<div id="results-in-a-decrease-of-the-mean-by-16.42-and-the-median-changed-from-being-10765-to-10641.the-differences-in-the-mean-and-the-median-are-small-and-imputing-na-values-doesnt-really-affect-the-values-very-much." class="section level2">
-<h2>results in a decrease of the mean by 16.42 and the median changed from being 10765 to 10641.The differences in the mean and the median are small, and imputing na values, doesn’t really affect the values very much.</h2>
+<div id="imputing-missing-values-with-mean-at-the-same-interval-across-all-days-results-in-a-decrease-of-the-mean-by-16.42-and-the-median-changed-from-being-10765-to-10641.the-differences-in-the-mean-and-the-median-are-small-and-imputing-na-values-doesnt-really-affect-the-values-very-much." class="section level2">
+<h2>Imputing missing values with mean at the same interval across all days results in a decrease of the mean by 16.42 and the median changed from being 10765 to 10641.The differences in the mean and the median are small, and imputing na values, doesn’t really affect the values very much.</h2>
 </div>
 <div id="part-4-weekdays-vs-weekends" class="section level2">
 <h2>Part 4 : weekdays vs weekends</h2>
